# exercicios-python-brasil

./: .gitignore  404.html  README.md  index.html  mkdocs.yml  pyproject.toml  sitemap.xml
01_estrutura_sequencial/: index.html
02_estrutura_de_decisao/: index.html
03_estrutura_de_repeticao/: index.html
04_listas/: index.html
assets/javascripts/: pyodide.js
docs/: 01_estrutura_sequencial.md  02_estrutura_de_decisao.md  03_estrutura_de_repeticao.md  04_listas.md  index.md
docs/assets/javascripts/: fonts.js
overrides/: main.html
overrides/partials/: comments.html
search/: search_index.json
